Forgot to startSession()

--- a/static/index.html
+++ b/static/index.html
@@ -88,7 +88,7 @@
                     $("#ip").val($.getUrlVar("ip"));
                     $("#port").val($.getUrlVar("port"));
                     $("#password").val($.getUrlVar("password"));
-
+                    startSession();
                 } else {
                     $('#getInfo').modal({
                         show: true
