--- a/static/index.html
+++ b/static/index.html
@@ -343,7 +343,7 @@
                     <br>Server Port:
                     <input type="text" name="port" id="port">
                     <br>Server Password:
-                    <input type="text" name="password" id="password">
+                    <input type="password" name="password" id="password">
                 </div>
                 <div class="modal-footer">
                     <a href="#" class="btn btn-primary" id="doStuff" data-dismiss="modal" aria-hidden="true" onclick="startSession();">Connect to console!</a>
